log
Wed 27 Sep 2023 09:43:24 PM UTC: 
 tests:  0|4
total_score: 0/70
aacc12b
Wed 27 Sep 2023 09:51:23 PM UTC: 
 heap.c | 24 ++++++++----------------
 1 file changed, 8 insertions(+), 16 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:23:10: error: void value not ignored as it ought to be
   23 |   return (void)pq->heapArray { 0 }
      |          ^~~~~~~~~~~~~~~~~~~
heap.c:23:29: error: expected ‘;’ before ‘{’ token
   23 |   return (void)pq->heapArray { 0 }
      |                             ^~
      |                             ;
heap.c:24:1: error: control reaches end of non-void function [-Werror=return-type]
   24 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4d20f1c
Wed 27 Sep 2023 09:53:19 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:23:39: error: expected ‘;’ before ‘}’ token
   23 |   return (void *)pq->heapArray[0].data
      |                                       ^
      |                                       ;
   24 | }
      | ~                                      
Compilation failed
d5629ff
Wed 27 Sep 2023 09:53:25 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
2262550
